App changes for the demo tomorrow

--- a/src/app/html/index.html
+++ b/src/app/html/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Hier wird das Bild deiner Katze eingefügt -->
+    <img id="catImage" src="LettyBild.jpeg" alt="Letty, die Katze">
+
     <h1>Klassisches Mühle Spiel</h1>
     <div id="gameStatus">Spieler 1 ist am Zug</div>
     <div class="board" id="board">
         <svg id="lines"></svg>
     </div>
     <script src="script.js"></script>
-    <!--img src="src/docker/app/html/LettyBild.jpeg" alt="Neko"-->
 </body>
 </html>
