--- a/src/app/html/index.html
+++ b/src/app/html/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--<img id="catImage" src="LettyBild.jpeg" alt="Letty, die Katze">-->
+
+
+    <!-- To display the successful change just uncomment the line below-->
+    <img id="catImage" src="LettyBild.jpeg" alt="Letty, die Katze">
 
     <!--<h1>Pipeline Success!</h1>--><h1>Klassisches Mühle Spiel</h1>
     <div id="gameStatus">Spieler 1 ist am Zug</div>
